tests/snapshots/yaml_suite_snapshots__yaml_suite_NKF9_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Empty keys in block and flow mapping
  from: "@perlpunk"
  tags: empty-key mapping
  yaml: "---\nkey: value\n: empty key\n---\n{\n key: value, : empty key\n}\n---\n# empty key and value\n:\n---\n# empty key and value\n{ : }\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL :value\n   =VAL :\n   =VAL :empty key\n  -MAP\n -DOC\n +DOC ---\n  +MAP {}\n   =VAL :key\n   =VAL :value\n   =VAL :\n   =VAL :empty key\n  -MAP\n -DOC\n +DOC ---\n  +MAP\n   =VAL :\n   =VAL :\n  -MAP\n -DOC\n +DOC ---…"
  emit: "---\nkey: value\n: empty key\n---\nkey: value\n: empty key\n---\n:\n---\n:\n"
