tests/snapshots/yaml_suite_snapshots__yaml_suite_NP9H_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 7.5. Double Quoted Line Breaks
  from: "http://www.yaml.org/spec/1.2/spec.html#id2787745"
  tags: double spec scalar whitespace upto-1.2
  yaml: "\"folded␣\nto a space,»\n␣\nto a line feed, or »\\\n \\ »non-content\"\n"
  tree: "+STR\n +DOC\n  =VAL \"folded to a space,\\nto a line feed, or \\t \\tnon-content\n -DOC\n-STR\n"
  json: "\"folded to a space,\\nto a line feed, or \\t \\tnon-content\"\n"
  dump: "\"folded to a space,\\nto a line feed, or \\t \\tnon-content\"\n"
