tests/snapshots/yaml_suite_snapshots__yaml_suite_NP9H_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "\"folded to a space,\\nto a line feed, or \\t \\tnon-content\"\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2787745"
  json: "\"folded to a space,\\nto a line feed, or \\t \\tnon-content\"\n"
  name: Spec Example 7.5. Double Quoted Line Breaks
  tags: double spec scalar whitespace upto-1.2
  tree: "+STR\n +DOC\n  =VAL \"folded to a space,\\nto a line feed, or \\t \\tnon-content\n -DOC\n-STR\n"
  yaml: "\"folded␣\nto a space,»\n␣\nto a line feed, or »\\\n \\ »non-content\"\n"
