tests/snapshots/yaml_suite_snapshots__yaml_suite_P2EQ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid sequene item on same line as previous item
  from: "@perlpunk"
  tags: error flow mapping sequence
  fail: true
  yaml: "---\n- { y: z }- invalid\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP {}\n    =VAL :y\n    =VAL :z\n   -MAP\n"
