tests/snapshots/yaml_suite_snapshots__yaml_suite_P2EQ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid sequene item on same line as previous item
  tags: error flow mapping sequence
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP {}\n    =VAL :y\n    =VAL :z\n   -MAP\n"
  yaml: "---\n- { y: z }- invalid\n"
